--- a/css/styles.css
+++ b/css/styles.css
@@ -4236,7 +4236,7 @@ input[type="button"].btn--primary:focus {
     bottom: 0;
     width: 100%;
     height: 100%;
-    background-image: url(../images/activites-bg_bu.jpeg);
+    background-image: url(../images/activites-bg.jpeg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
